--- a/whatImUpTo/3d-page.html
+++ b/whatImUpTo/3d-page.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
-      href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-      rel="stylesheet"/>
-      <link rel="stylesheet" href="../style.css">
+            href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+            rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../style.css">
     <title>Preston Bourne</title>
 </head>
 <header>
@@ -26,12 +29,19 @@
                 <li><a href="mailto:preston@newschool.edu">Contact Me</a></li>
             </ul>
         </div>
-
     </nav>
-    </header>
+
+</header>
     <body>
         <div class="main-container">
     <h1>3D</h1>
+            <div class="sketch-row">
+                <div class="sketch-container">
+                    <img src="../gifs/warped-world.gif" alt="">
+                </div>
+                <div class="sketch-description-container"> <p>Warped World, currently WIP. a psychedelic surrealist take on Earth's most extreme landscapes. </p>
+                    <p> <a href="warped-world.html" target="_blank">See More</a>.</p> </div>
+            </div>
             <div class="sketch-row">
             <div class="sketch-container">
         <img src="../3d-renders/heart-chair.jpg" alt="">
@@ -44,7 +54,7 @@
             <div class="sketch-container">
         <img src="../gifs/museum-tour.gif" alt="">
         </div>
-        <div class="sketch-description-container"> <p>Virtual art exhibition made in my freshman year.  Unfortunately, Unity Web Builds are only supported in certain browsers, so file may not load in Safari. </p>
+        <div class="sketch-description-container"> <p>Virtual art exhibition made in freshman year.  Unfortunately, Web Builds poorly integrate safari & URP. For proper experience, request project folder.</p>
            <p> <a href="https://prestonbourne.itch.io/prestons-art-museum" target="_blank">Explore Museum</a>.</p> </div>
         </div>
 
