--- a/whatImUpTo/kinect.html
+++ b/whatImUpTo/kinect.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
-      href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-      rel="stylesheet"/>
-      <link rel="stylesheet" href="../style.css">
+            href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+            rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../style.css">
     <title>Preston Bourne</title>
-</head>
 </head>
 <header>
 
@@ -27,9 +29,9 @@
                 <li><a href="mailto:preston@newschool.edu">Contact Me</a></li>
             </ul>
         </div>
-
     </nav>
-    </header>
+
+</header>
 <body>
     <div class="kinect-container" >
     <h1>Kinect: A social platform for Creatives in Tech</h1>
