--- a/whatImUpTo/what-im-up-to.html
+++ b/whatImUpTo/what-im-up-to.html
@@ -5,26 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
-      href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-      rel="stylesheet"/>
-      <link rel="stylesheet" href="../style.css">
+            href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+            rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../style.css">
     <title>Preston Bourne</title>
 </head>
 <header>
 
     <nav class="navbar">
-     <div class="home-page"><a href="../index.html">Preston Bourne</a></div>
-       <a href="#" class="toggle-button">
-           <span class="bar" ></span>
-           <span class="bar" ></span>
-           <span class="bar" ></span>
-       </a>
+        <div class="home-page"><a href="../index.html">Preston Bourne</a></div>
+        <a href="#" class="toggle-button">
+            <span class="bar" ></span>
+            <span class="bar" ></span>
+            <span class="bar" ></span>
+        </a>
         <div class="navbar-links" >
-      <ul>
-            <!-- <li><a href="/selectedworks/selected-works.html">Selected Works</a></li> -->
-            <li><a href="what-im-up-to.html">My Work</a></li>
-            <li><a href="mailto:preston@newschool.edu">Contact Me</a></li>
-      </ul>
+            <ul>
+                <!-- <li><a href="/selectedworks/selected-works.html">Selected Works</a></li> -->
+                <li><a href="what-im-up-to.html">My Work</a></li>
+                <li><a href="mailto:preston@newschool.edu">Contact Me</a></li>
+            </ul>
         </div>
     </nav>
 
