--- a/whatImUpTo/what-im-up-to.html
+++ b/whatImUpTo/what-im-up-to.html
@@ -54,7 +54,7 @@
              <img src="../images/web-dev-work.png" alt="">
         </div>
    
-    <div class="text-container"> <p>Experimental code primarily done with Javascript. These are artistic explorations and are meant to push the definition of Web Design. If you'd like to see more formally built websites, reach out!</p>
+    <div class="text-container"> <p> When I'm not building sites, I'm doing experimental coding using traditional Web Dev tools. </p>
     </div>
 </a>
     </div> 
