added-game-dev-work

--- a/whatImUpTo/3d-page.html
+++ b/whatImUpTo/3d-page.html
@@ -46,7 +46,7 @@
             <div class="sketch-container">
         <img src="../3d-renders/heart-chair.jpg" alt="">
         </div>
-        <div class="sketch-description-container"> <p>Conceptual chair for my 3D elective Sophomore year. Assignment was due on Valentine's day hence the source material.</p>
+        <div class="sketch-description-container"> <p>Conceptual chair for my 3D elective Sophomore year. Assignment was due on Valentine's day which inspired the design.</p>
             </div>
         </div>
         
@@ -54,7 +54,7 @@
             <div class="sketch-container">
         <img src="../gifs/museum-tour.gif" alt="">
         </div>
-        <div class="sketch-description-container"> <p>Virtual art exhibition made in freshman year.  Unfortunately, Web Builds poorly integrate safari & URP. For proper experience, request project folder.</p>
+        <div class="sketch-description-container"> <p>Virtual art exhibition made in freshman year.  Unfortunately, Web Builds poorly integrate safari & URP. For proper experience, request build.</p>
            <p> <a href="https://prestonbourne.itch.io/prestons-art-museum" target="_blank">Explore Museum</a>.</p> </div>
         </div>
 
