--- a/whatImUpTo/interactive-type.html
+++ b/whatImUpTo/interactive-type.html
@@ -10,13 +10,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../../style.css">
     <title>Preston Bourne</title>
 </head>
 <header>
 
     <nav class="navbar">
-        <div class="home-page"><a href="../index.html">Preston Bourne</a></div>
+        <div class="home-page"><a href="../../index.html">Preston Bourne</a></div>
         <a href="#" class="toggle-button">
             <span class="bar" ></span>
             <span class="bar" ></span>
@@ -25,7 +25,7 @@
         <div class="navbar-links" >
             <ul>
                 <!-- <li><a href="/selectedworks/selected-works.html">Selected Works</a></li> -->
-                <li><a href="what-im-up-to.html">My Work</a></li>
+                <li><a href="../what-im-up-to.html">My Work</a></li>
                 <li><a href="mailto:preston@newschool.edu">Contact Me</a></li>
             </ul>
         </div>
@@ -40,14 +40,14 @@
             <h1>Interactive Typography</h1>
             <div class="sketch-row">
             <div class="sketch-container">
-        <img src="../gifs/hollywood.gif" alt="">
+        <img src="../../gifs/hollywood.gif" alt="">
         </div>
         <div class="sketch-description-container"> <p>The p5.js library allows programmers to create an array of points along a font via its textToPoints() function. </div>
         </div>
         
         <div class="sketch-row">
             <div class="sketch-container">
-        <img src="../gifs/tv-static-sketch.gif" alt="">
+        <img src="../../gifs/tv-static-sketch.gif" alt="">
         </div>
         <div class="sketch-description-container"> <p>Through combining this with native Javascript, I'm able to create a variety of effects that can be embedded into websites.</p>
             </div>
@@ -55,7 +55,7 @@
         
         <div class="sketch-row">
             <div class="sketch-container">
-        <img src="../gifs/burn.gif" alt="">
+        <img src="../../gifs/burn.gif" alt="">
         </div>
         <div class="sketch-description-container"> <p>
            <p> <a href="https://editor.p5js.org/Saintpreston/full/FyzcV97gz" target="_blank">View code snippet</a>.</p> </div>
