--- a/whatImUpTo/what-im-up-to.html
+++ b/whatImUpTo/what-im-up-to.html
@@ -49,12 +49,12 @@
     </div> 
 
     <div class="sub-container">
-        <a  href="p5js.html" class="sub-container-link" > 
+        <a href="webDevWork/web-dev.html" class="sub-container-link" >
         <div class="icon" >
              <img src="../images/web-dev-work.png" alt="">
         </div>
    
-    <div class="text-container"> <p>Web Development through Javascript and it's libraries. Focused on meaningful interactions and generative work.</p>
+    <div class="text-container"> <p>Building Responsive Websites and Interactive Code Sketches.</p>
     </div>
 </a>
     </div> 
