--- a/whatImUpTo/experimental-cam.html
+++ b/whatImUpTo/experimental-cam.html
@@ -10,13 +10,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../../style.css">
     <title>Preston Bourne</title>
 </head>
 <header>
 
     <nav class="navbar">
-        <div class="home-page"><a href="../index.html">Preston Bourne</a></div>
+        <div class="home-page"><a href="../../index.html">Preston Bourne</a></div>
         <a href="#" class="toggle-button">
             <span class="bar" ></span>
             <span class="bar" ></span>
@@ -25,7 +25,7 @@
         <div class="navbar-links" >
             <ul>
                 <!-- <li><a href="/selectedworks/selected-works.html">Selected Works</a></li> -->
-                <li><a href="what-im-up-to.html">My Work</a></li>
+                <li><a href="../what-im-up-to.html">My Work</a></li>
                 <li><a href="mailto:preston@newschool.edu">Contact Me</a></li>
             </ul>
         </div>
@@ -37,7 +37,7 @@
     <h1>Experimental Camera - Prototype</h1>
             <div class="sketch-row">
             <div class="sketch-container">
-        <img src="../gifs/normal-color.gif" alt="">
+        <img src="../../gifs/normal-color.gif" alt="">
         </div>
         <div class="sketch-description-container"> <p>By accessing the pixel array, p5 allows users to alter the shapes, size, colors and amount of pixels displayed from the webcam feed. </p>
             </div>
@@ -45,7 +45,7 @@
         
         <div class="sketch-row">
             <div class="sketch-container">
-        <img src="../gifs/square-experimental-camera.gif" alt="">
+        <img src="../../gifs/square-experimental-camera.gif" alt="">
         </div>
         <div class="sketch-description-container"> <p>Tying this to the HTML allows users to edit their pixels without adjusting code themselves, making it so that a user can set the display to their liking.</p>
             </div>
@@ -53,7 +53,7 @@
         
         <div class="sketch-row">
             <div class="sketch-container">
-        <img src="../gifs/camera-ellipse-green.gif" alt="">
+        <img src="../../gifs/camera-ellipse-green.gif" alt="">
         </div>
         <div class="sketch-description-container"> 
          <p>   <a href="https://editor.p5js.org/Saintpreston/sketches/ppV6jSGW0" target="_blank">View code snippet</a>.</p> </div>
