--- a/whatImUpTo/kinect.html
+++ b/whatImUpTo/kinect.html
@@ -33,7 +33,7 @@
 
 </header>
 <body>
-    <div class="kinect-container" >
+    <div class="web-dev-container" >
     <h1>Kinect: A social platform for Creatives in Tech</h1>
     
 
@@ -43,7 +43,8 @@
 
 
     <h2>Overview</h2>
-    <p>This is a UI/UX design sprint, the challenge was to come up with a platform that would benefit everyone in the classroom. Instead of of the prompt 
+    <p>This was design sprint, the challenge was to come up with a platform that would benefit everyone in the
+        classroom. Instead of of the prompt
         to find a common problem amongst my peers via interviews, I made use of the information I already had,
          which is that fact that we all had the same major, Design & Technology. I then directed my interviews based on that fact. This allowed me to extend the reach of the app to students from other schools with similar majors and eventually creatives in general.
     </p>
@@ -75,7 +76,7 @@ Most interviewees believed that AR & VR technology would hold its relevance and 
 <br>
 <div>
 <h2>Reflections</h2>
-<p>As all good User Interfaces should be, this is a work in progress. A breakdown of the typography element was intentionally omitted because going for contemporary aesthetics whilst choosing a serif font can be perceived as contradictory. Monospace fonts feel the most in tune with a futuristic, "techy" design but those can also be jarring and are best suited for desktops and laptops rather than smaller screens. I like the roboto choice because it is a system font which feels in place with the aforementioned "techy" feel however the slab serif roboto may be overused.
+<p>As all User Interfaces should be, this is a work in progress. A breakdown of the typography element was intentionally omitted because going for contemporary aesthetics whilst choosing a serif font can be perceived as contradictory. Monospace fonts feel the most in tune with a futuristic, "techy" design but those can also be jarring and are best suited for desktops and laptops rather than smaller screens. I like the roboto choice because it is a system font which feels in place with the aforementioned "techy" feel however the slab serif roboto may be overused.
 
 I'm also considering a darker shade of blue in the background as to further emphasize the neon green, however black and neon green is quite a common combination in digital and tangible product design. 
 The goal should always to be improved yet recognizable however I've gotten feedback that the contrast can be a bit jarring. The logo also closely resembles that of an existing yet non-competing company which is acceptable but never ideal. I'm currently working on the rest of the screens and revising the current style choices. As always, I'm open to informed feedback so if you have any suggestions drop me an email.</p>
