fixed file paths

--- a/whatImUpTo/webDevWork/web-dev.html
+++ b/whatImUpTo/webDevWork/web-dev.html
@@ -40,7 +40,7 @@
 
     <div class="sketch-row">
         <div class="sketch-container">
-    <img  style="width: 90%;"  src="/images/technocap-proto.png" alt="">
+    <img  style="width: 90%;"  src="../../images/technocap-proto.png" alt="">
     </div>
     <div class="sketch-description-container"> <p>Informational Website based on research by Luis Suarez-Villa.
        <p> <a href="technocapitalism.html">Learn More</a>!</p> </div>
@@ -48,7 +48,7 @@
 
     <div class="sketch-row">
         <div class="sketch-container">
-    <img  style="width: 90%;"  src="/images/swiss-design-cover.png" alt="">
+    <img  style="width: 90%;"  src="../../images/swiss-design-cover.png" alt="">
     </div>
     <div class="sketch-description-container"> <p>Helped develop a website based on an airtable API made by a peer
        <p> <a href="poster-archive.html">Learn More</a>!</p> </div>
