added full walkthrough of game

--- a/whatImUpTo/gameDevWork/3d-page.html
+++ b/whatImUpTo/gameDevWork/3d-page.html
@@ -10,13 +10,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../../style.css">
     <title>Preston Bourne</title>
 </head>
 <header>
 
     <nav class="navbar">
-        <div class="home-page"><a href="../index.html">Preston Bourne</a></div>
+        <div class="home-page"><a href="../../index.html">Preston Bourne</a></div>
         <a href="#" class="toggle-button">
             <span class="bar" ></span>
             <span class="bar" ></span>
@@ -25,7 +25,7 @@
         <div class="navbar-links" >
             <ul>
                 <!-- <li><a href="/selectedworks/selected-works.html">Selected Works</a></li> -->
-                <li><a href="what-im-up-to.html">My Work</a></li>
+                <li><a href="../what-im-up-to.html">My Work</a></li>
                 <li><a href="mailto:preston@newschool.edu">Contact Me</a></li>
             </ul>
         </div>
@@ -37,14 +37,14 @@
     <h1>3D</h1>
             <div class="sketch-row">
                 <div class="sketch-container">
-                    <img src="../gifs/warped-world.gif" alt="">
+                    <img src="../../gifs/warped-world.gif" alt="">
                 </div>
                 <div class="sketch-description-container"> <p>Warped World, currently WIP. a psychedelic surrealist take on Earth's most extreme landscapes. </p>
                     <p> <a href="warped-world.html" target="_blank">See More</a>.</p> </div>
             </div>
             <div class="sketch-row">
             <div class="sketch-container">
-        <img src="../3d-renders/heart-chair.jpg" alt="">
+        <img src="../../3d-renders/heart-chair.jpg" alt="">
         </div>
         <div class="sketch-description-container"> <p>Conceptual chair for my 3D elective Sophomore year. Assignment was due on Valentine's day which inspired the design.</p>
             </div>
@@ -52,7 +52,7 @@
         
         <div class="sketch-row">
             <div class="sketch-container">
-        <img src="../gifs/museum-tour.gif" alt="">
+        <img src="../../gifs/museum-tour.gif" alt="">
         </div>
         <div class="sketch-description-container"> <p>Virtual art exhibition made in freshman year.  Unfortunately, Web Builds poorly integrate safari & URP. For proper experience, request build.</p>
            <p> <a href="https://prestonbourne.itch.io/prestons-art-museum" target="_blank">Explore Museum</a>.</p> </div>
@@ -60,7 +60,7 @@
 
         <div class="sketch-row">
             <div class="sketch-container">
-        <img src="../3d-renders/shark-render.png" alt="">
+        <img src="../../3d-renders/shark-render.png" alt="">
         </div>
         <div class="sketch-description-container"> <p>Rigged & rendered shark done for 3D modeling class in Sophomore year. Shark was then kitbashed with underwater background and edited for believable lighting using photoshop.</p>
             </div>
