--- a/whatImUpTo/what-im-up-to.html
+++ b/whatImUpTo/what-im-up-to.html
@@ -38,7 +38,7 @@
 <div class="main-container">
   
     <div class="sub-container">
-        <a  href="3d-page.html" class="sub-container-link" > 
+        <a href="gameDevWork/3d-page.html" class="sub-container-link" >
         <div class="icon" >
              <img src="../images/3d-work.png" alt="">
         </div>
