--- a/whatImUpTo/gameDevWork/warped-world.html
+++ b/whatImUpTo/gameDevWork/warped-world.html
@@ -45,7 +45,7 @@
 
 
     <h2>Overview</h2>
-    <p>Final Project for my Sophomore year, the prompt is a virtual environment with at least three minutes of
+    <p>Final Project for my Core Lab Environments class, Sophomore year, the prompt was to create a virtual space with at least three minutes of
         exploration time.
         The project must be done using the Unity Game Engine and only limited amount of third party assets were
         allowed.
