--- a/whatImUpTo/webDevWork/technocapitalism.html
+++ b/whatImUpTo/webDevWork/technocapitalism.html
@@ -37,7 +37,7 @@
     <h1>Technocapitalism: A Redesign</h1>
 
 
-    <img style="height: 50%; width: 50%; margin-left: 22vw; border-radius: 5px;" src="/images/technocap-proto.png"
+    <img style="height: 50%; width: 50%; margin-left: 22vw; border-radius: 5px;" src="../images/technocap-proto.png"
          alt="">
 
     <h1><a class="link"
