--- a/whatImUpTo/webDevWork/poster-archive.html
+++ b/whatImUpTo/webDevWork/poster-archive.html
@@ -37,8 +37,8 @@
     <h1>Swiss Poster Archive</h1>
 
 
-    <img style="height: 50%; width: 50%; margin-left: 22vw; border-radius: 5px;" src="/images/swiss-design-cover.png"
-         alt="">
+    <img style="height: 50%; width: 50%; margin-left: 22vw; border-radius: 5px;" src="../../images/swiss-design-cover.png"
+         alt="An image of the virtual Archive">
 
     <h1><a class="link"
            href="https://saintpreston.github.io/swiss-poster-api/" target="_blank">View Website</a>
