--- a/whatImUpTo/webDevWork/technocapitalism.html
+++ b/whatImUpTo/webDevWork/technocapitalism.html
@@ -38,7 +38,7 @@
 
 
     <img style="height: 50%; width: 50%; margin-left: 22vw; border-radius: 5px;" src="../../images/technocap-proto.png"
-         alt="">
+         alt="An image of the Figma Mockup">
 
     <h1><a class="link"
            href="https://www.figma.com/proto/Xgjhyz4TgQlNdtEsQmfCRO/Intro-to-Design-Ethics?page-id=0%3A1&node-id=2%3A4&viewport=308%2C105%2C0.16&scaling=scale-down&starting-point-node-id=2%3A4" target="_blank"> View Prototype  </a>
