--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <p>👋Hey there, I'm <a href="https://www.linkedin.com/in/preston-bourne-52466522b/" target="_break">Preston</a>.
     I'm currently a BFA Design & Technology student at <a href="https://www.newschool.edu/parsons/" target="_break">Parsons School of Design</a> in New York.
-I'm interested in Front End Development, UI/UX, 3D Renders & Illustration.</p>
+I'm interested in Front End Development, UI/UX, Game Design, 3D Modeling & Illustration.</p>
 
 
 </div>
