--- a/whatImUpTo/webDevWork/technocapitalism.html
+++ b/whatImUpTo/webDevWork/technocapitalism.html
@@ -41,8 +41,8 @@
          alt="An image of the Figma Mockup">
 
     <h1><a class="link"
-           href="https://www.figma.com/proto/Xgjhyz4TgQlNdtEsQmfCRO/Intro-to-Design-Ethics?page-id=0%3A1&node-id=2%3A4&viewport=308%2C105%2C0.16&scaling=scale-down&starting-point-node-id=2%3A4" target="_blank"> View Prototype  </a>
-       <a style="float: right" href="https://saintpreston.github.io/TechnoCapRedesign/" target="_blank">View Webpage</a></h1>
+           href="https://www.figma.com/proto/Xgjhyz4TgQlNdtEsQmfCRO/Intro-to-Design-Ethics?page-id=0%3A1&node-id=2%3A4&viewport=308%2C105%2C0.16&scaling=scale-down&starting-point-node-id=2%3A4" target="_blank"> View Prototype</a>
+       <a href="https://saintpreston.github.io/TechnoCapRedesign/" target="_blank">View Webpage</a></h1>
 
 
     <h2>Overview</h2>
