changed some wording

--- a/whatImUpTo/webDevWork/poster-archive.html
+++ b/whatImUpTo/webDevWork/poster-archive.html
@@ -53,16 +53,20 @@
     <br>
     <div>
         <h2>Design</h2>
-        <p>Whilst for this project I took a backseat in the design, I was able tweak the CSS to allow the more favorable 2D as opposed to 1D scrolling. Being able to move laterally and longitudinally allows users to be more immersed. Development wise, you may notice that even though the filters "work" and they do remove the posters that aren't relevent, the ones that are on display remain in their original space. Next steps are making the website reorganize itself based on the filters. The styling of the filter input is also a bit outdated and I'm currently doing a different version in my own branch. <a href="">View Repository</a> </p>
+        <p>
+            Whilst for this project I took a backseat in the design, I did have the input of deciding against vertical scrolling and making the user being to scroll in 2 dimensions for a more immersive experience.  Development wise, you may notice that even though the filters "work" and they do remove the posters that aren't relevant, the ones that are on display remain in their original space. Next steps are making the website reorganize itself based on the filters. The styling of the filter input is also a bit outdated and I'm exploring ways to make this sleeker.<a href="">View Repository</a> </p>
     </div>
 
 <div>
         <h2>Reflections</h2>
-        <p>As all good User Interfaces should be, this is a work in progress. I'd like to acknowledge that at the
+        <p>
+            Since creating this I was able to get React.js under my belt so I'll likely redo using the frame work and render the content more dynamically.
+            <br>
+            As all good User Interfaces should be, this is a work in progress. I'd like to acknowledge that at the
             time of reading this the site may not yet be responsive. It being in the midst of finals it was
             developed only for Desktop view. However, as I find the time over summer break, I intend to make it
             responsive and potentially even add to the research element because someone looking for more in depth
-            analysis may find it a bit sparse. The API also needs to be reorganized, it was a bit unfair that someone who doesn't know how to work with APIs was asked to create one thus I'll do some refactoring, the image sizing can also use some optimization, I dont want a drop in quality but some users mentioned noticing longer load times.</p>
+            analysis may find it a bit sparse.</p>
     </div>
 
 </div>
