style cursor, fixe formatting

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 </header>
 
 <body>
+  <div class="follow-cursor"></div>
     <div class="selfie-container">
         <img id="my-memoji" src="images/my-memoji.png" alt="">
     </div>
@@ -46,6 +47,8 @@ I'm interested in Front End Development, UI/UX, Game Design, 3D Modeling & Illus
 
 
 </div>
-
+<script src="cursor.js"></script>
 </body>
+
 </html>
+
