--- a/whatImUpTo/gameDevWork/3d-page.html
+++ b/whatImUpTo/gameDevWork/3d-page.html
@@ -33,6 +33,7 @@
 
 </header>
     <body>
+        <div class="follow-cursor" ></div>
         <div class="main-container">
     <h1>3D</h1>
             <div class="sketch-row">
@@ -71,3 +72,5 @@
         
         </div>
     </body>
+    <script src="../../cursor.js"></script> 
+    </html>
