--- a/whatImUpTo/kinect.html
+++ b/whatImUpTo/kinect.html
@@ -33,6 +33,7 @@
 
 </header>
 <body>
+    <div class="follow-cursor" ></div>
     <div class="web-dev-container" >
     <h1>Kinect: A social platform for Creatives in Tech</h1>
     
@@ -84,3 +85,5 @@ The goal should always to be improved yet recognizable however I've gotten feedb
 
 </div>
 </body>
+<script src="../../cursor.js"></script> 
+</html>
