--- a/whatImUpTo/webDevWork/experimental-cam.html
+++ b/whatImUpTo/webDevWork/experimental-cam.html
@@ -33,6 +33,7 @@
 
 </header>
     <body>
+        <div class="follow-cursor" ></div>
         <div class="main-container">
     <h1>Experimental Camera - Prototype</h1>
             <div class="sketch-row">
@@ -56,9 +57,11 @@
         <img src="../../gifs/camera-ellipse-green.gif" alt="">
         </div>
         <div class="sketch-description-container"> 
-         <p>   <a href="https://editor.p5js.org/Saintpreston/sketches/ppV6jSGW0" target="_blank">View code snippet</a>.</p> </div>
+         <p>   <a href="https://editor.p5js.org/Saintpreston/sketches/EDkjQSBvx" target="_blank">View code snippet</a>.</p> </div>
         </div>
         
         
         </div>
     </body>
+    <script src="../../cursor.js"></script> 
+    </html>
