--- a/whatImUpTo/webDevWork/poster-archive.html
+++ b/whatImUpTo/webDevWork/poster-archive.html
@@ -33,6 +33,7 @@
 
 </header>
 <body>
+    <div class="follow-cursor" ></div>
 <div class="web-dev-container" >
     <h1>Swiss Poster Archive</h1>
 
@@ -54,7 +55,7 @@
     <div>
         <h2>Design</h2>
         <p>
-            Whilst for this project I took a backseat in the design, I did have the input of deciding against vertical scrolling and making the user being to scroll in 2 dimensions for a more immersive experience.  Development wise, you may notice that even though the filters "work" and they do remove the posters that aren't relevant, the ones that are on display remain in their original space. Next steps are making the website reorganize itself based on the filters. The styling of the filter input is also a bit outdated and I'm exploring ways to make this sleeker.<a href="">View Repository</a> </p>
+            Whilst for this project I took a backseat in the design, I did have the input of deciding against vertical scrolling and making the user being to scroll in 2 dimensions for a more immersive experience.  Development wise, you may notice that even though the filters "work" and they do remove the posters that aren't relevant, the ones that are on display remain in their original space. Next steps are making the website reorganize itself based on the filters. The styling of the filter input is also a bit outdated and I'm exploring ways to make this sleeker.<a href="#">View Repository</a> </p>
     </div>
 
 <div>
@@ -71,3 +72,5 @@
 
 </div>
 </body>
+<script src="../../cursor.js"></script> 
+</html>
