--- a/whatImUpTo/webDevWork/technocapitalism.html
+++ b/whatImUpTo/webDevWork/technocapitalism.html
@@ -33,6 +33,7 @@
 
 </header>
 <body>
+    <div class="follow-cursor" ></div>
 <div class="web-dev-container" >
     <h1>Technocapitalism: A Redesign</h1>
 
@@ -97,4 +98,6 @@
     </div>
 
 </div>
+<script src="../../cursor.js"></script> 
 </body>
+</html>
