--- a/whatImUpTo/gameDevWork/warped-world.html
+++ b/whatImUpTo/gameDevWork/warped-world.html
@@ -33,6 +33,7 @@
 
 </header>
 <body>
+    <div class="follow-cursor" ></div>
     <div class="web-dev-container" >
     <h1>Warped World</h1>
     
@@ -102,3 +103,5 @@
 
 </div>
 </body>
+<script src="../../cursor.js"></script> 
+</html>
