--- a/whatImUpTo/webDevWork/web-dev.html
+++ b/whatImUpTo/webDevWork/web-dev.html
@@ -1,88 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-            href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-            rel="stylesheet"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../style.css">
+      href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../../style.css" />
     <title>Preston Bourne</title>
-</head>
-<header>
-
+  </head>
+  <header>
     <nav class="navbar">
-        <div class="home-page"><a href="../../index.html">Preston Bourne</a></div>
-        <a href="#" class="toggle-button">
-            <span class="bar" ></span>
-            <span class="bar" ></span>
-            <span class="bar" ></span>
-        </a>
-        <div class="navbar-links" >
-            <ul>
-                <!-- <li><a href="/selectedworks/selected-works.html">Selected Works</a></li> -->
-                <li><a href="../what-im-up-to.html">My Work</a></li>
-                <li><a href="mailto:preston@newschool.edu">Contact Me</a></li>
-            </ul>
-        </div>
+      <div class="home-page"><a href="../../index.html">Preston Bourne</a></div>
+      <a href="#" class="toggle-button">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </a>
+      <div class="navbar-links">
+        <ul>
+          <!-- <li><a href="/selectedworks/selected-works.html">Selected Works</a></li> -->
+          <li><a href="../what-im-up-to.html">My Work</a></li>
+          <li><a href="mailto:preston@newschool.edu">Contact Me</a></li>
+        </ul>
+      </div>
     </nav>
+  </header>
 
-</header>
-
-<body>
-    
-<div class="main-container">
-
-
-    <div class="sketch-row">
+  <body>
+    <div class="follow-cursor" ></div>
+    <div class="main-container">
+      <div class="sketch-row">
         <div class="sketch-container">
-    <img  style="width: 90%;"  src="../../images/technocap-proto.png" alt="">
-    </div>
-    <div class="sketch-description-container"> <p>Informational Website based on research by Luis Suarez-Villa.
-       <p> <a href="technocapitalism.html">Learn More</a>!</p> </div>
-    </div>
+          <img
+            style="width: 90%"
+            src="../../images/technocap-proto.png"
+            alt=""
+          />
+        </div>
+        <div class="sketch-description-container">
+          <p>Informational Website based on research by Luis Suarez-Villa.</p>
+          <p><a href="technocapitalism.html">Learn More</a>!</p>
+        </div>
+      </div>
 
-    <div class="sketch-row">
+
+
+      <div class="sketch-row">
         <div class="sketch-container">
-    <img  style="width: 90%;"  src="../../images/swiss-design-cover.png" alt="">
+          <img src="../../images/a-rose-for-homepage.png" alt="" />
+        </div>
+        <div class="sketch-description-container">
+          <p>A small pet project of my first explorations with three.js, SCSS and localStorage.</p>
+          <p>
+            <a
+              href="https://saintpreston.github.io/aRoseFor/index.html"
+              target="_blank"
+              >View more</a
+            >.
+          </p>
+        </div>
+      </div>
+
+      <div class="sketch-row">
+        <div class="sketch-container">
+          <img
+            style="width: 90%"
+            src="../../images/swiss-design-cover.png"
+            alt=""
+          />
+        </div>
+        <div class="sketch-description-container">
+          <p>
+            Helped develop a website based on an airtable API made by a peer
+          </p>
+          <p><a href="poster-archive.html">Learn More</a>!</p>
+        </div>
+      </div>
+
+      <div class="sketch-row">
+        <div class="sketch-container">
+          <img src="../../gifs/hollywood.gif" alt="" />
+        </div>
+        <div class="sketch-description-container">
+          <p>Interactive Typography made with Javascript and p5.js.</p>
+          <p><a href="interactive-type.html">View more</a>.</p>
+        </div>
+      </div>
+
+      <div class="sketch-row">
+        <div class="sketch-container">
+          <img src="../../gifs/square-experimental-camera.gif" alt="" />
+        </div>
+        <div class="sketch-description-container">
+          <p>Experimental Camera.</p>
+          <p><a href="experimental-cam.html">View more</a>.</p>
+        </div>
+      </div>
+
+      <div class="sketch-row">
+        <div class="sketch-container">
+          <img src="../../gifs/js-driving.gif" alt="" />
+        </div>
+        <div class="sketch-description-container">
+          <p>Javascript driving game.</p>
+          <p>
+            <a
+              href="https://saintpreston.github.io/experimental-html/finished.html"
+              target="_blank"
+              >View more</a
+            >.
+          </p>
+        </div>
+      </div>
+
     </div>
-    <div class="sketch-description-container"> <p>Helped develop a website based on an airtable API made by a peer
-       <p> <a href="poster-archive.html">Learn More</a>!</p> </div>
-    </div>
-
-    
-    <div class="sketch-row">
-    <div class="sketch-container">
-<img src="../../gifs/hollywood.gif" alt="">
-</div>
-<div class="sketch-description-container"> <p>Interactive Typography made with Javascript and p5.js. 
-   <p> <a href="interactive-type.html">View more</a>.</p> </div>
-</div>
-
-<div class="sketch-row">
-    <div class="sketch-container">
-<img src="../../gifs/square-experimental-camera.gif" alt="">
-</div>
-<div class="sketch-description-container"> <p>Experimental Camera.</p>
-   <p> <a href="experimental-cam.html">View more</a>.</p> </div>
-</div>
-
-<div class="sketch-row">
-    <div class="sketch-container">
-<img src="../../gifs/js-driving.gif" alt="">
-</div>
-<div class="sketch-description-container"> <p>Javascript driving game.</p>
-   <p> <a href="https://saintpreston.github.io/experimental-html/finished.html" target="_blank">View more</a>.</p> </div>
-</div>
-
-
-
-</div>
-
-</body>
-
+    <script src="../../cursor.js"></script> 
+  </body>
 </html>
